Fix: React blank screen issue, rebuild and redeploy

--- a/bbtdash/frontend/package.json
+++ b/bbtdash/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bbtdash",
   "version": "0.1.0",
+  "homepage": "https://aa2955.github.io/bbt-dashboard",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
